# osa_airp1_robot

airp1_apps/: CMakeLists.txt  package.xml
airp1_apps/launch/: airp1_demo.launch  airp1_global_industrie_demo.launch  airp1_table_demo.launch  airp1_teleop_demo.launch  airp1_two_teleop_demo.launch  airp1_waldo_teleop.launch  ork_object_detection.launch
airp1_apps/script/: launch_airp1_demo.sh
airp1_apps/src/: arm_controller.cpp  joy_conductor.cpp  pick_place.cpp
airp1_bringup/: CMakeLists.txt  package.xml
airp1_bringup/launch/: airp1_bringup.launch
airp1_controller/: CMakeLists.txt  airp1_controller.yaml  controller_plugins.xml  package.xml
airp1_controller/include/airp1_controller/: airp1_controller.h
airp1_controller/launch/: airp1_controller.launch  seven_dof_arm_world.launch
airp1_controller/src/: airp1_controller.cpp
airp1_controller/urdf/: seven_dof_arm.xacro
airp1_controller/urdf/sensors/: xtion_pro_live.urdf.xacro
airp1_description/: CMakeLists.txt  package.xml
airp1_description/config/: urdf.rviz
airp1_description/launch/: airp1_control.launch  airp1_gazebo.launch  airp1_rviz.launch
airp1_description/meshes/collision/: tripod_link_80_collision.stl
airp1_description/urdf/: airp1.gazebo  airp1.xacro  airp1_gazebo.xacro  airp1_two_arms.xacro
airp1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
airp1_moveit_config/config/: airp1.srdf  kinematics.yaml  (+4 more)
osa_airp1_robot/: CMakeLists.txt  package.xml
osa_r2p_robot/: CMakeLists.txt  package.xml
r2p_apps/: CMakeLists.txt  package.xml
r2p_bringup/: CMakeLists.txt  package.xml
r2p_controller/: CMakeLists.txt  controller_plugins.xml  package.xml  r2p_controller.yaml
r2p_controller/include/r2p_controller/: r2p_controller.h
r2p_controller/launch/: r2p_controller.launch  seven_dof_arm_world.launch
r2p_controller/src/: r2p_controller.cpp
r2p_controller/urdf/: seven_dof_arm.xacro
r2p_controller/urdf/sensors/: xtion_pro_live.urdf.xacro
r2p_description/: CMakeLists.txt  package.xml
r2p_moveit_config/: CMakeLists.txt  package.xml
(+56 files in other folders)
